# z3.rs

./: .gitignore  .gitmodules  .travis.yml  API_EXTENSIONS_SUMMARY.md  Cargo.toml  LICENSE.txt  README.md  README.sys  all_changes.patch  changes.patch  release-plz.toml  z3.rs.sln
.github/workflows/: prebuild.py  prebuild.yml  publish-z3-src.yml  release-plz.yml  release-z3-src.yml  rust.yml
scripts/: check-bindings.sh  gen-bindings.sh
scripts/bindgen-transform/: Cargo.toml
scripts/bindgen-transform/src/: main.rs
src/: ast.rs  context.rs  lib.rs  optimize.rs  symbol.rs
tests/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
z3/: CHANGELOG.md  Cargo.toml  README.md
z3-macros/: Cargo.toml
z3-macros/src/: default_ctx.rs  lib.rs  non_null.rs
z3-src/: CHANGELOG.md  Cargo.toml  README.md
z3-src/src/: lib.rs
z3-sys/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  bindgen_transform.rs  build.rs  build_transform.rs  wrapper.h
z3-sys-bindgen/: Cargo.toml
z3-sys-bindgen/src/: main.rs
z3-sys/scripts/: generate_enums.sh  make_artifact.sh
z3-sys/src/: .lib.rs.swp  enums.rs  functions_patched.rs  generated.rs  lib.rs  types.rs  wrapper.h
z3-sys/src/generated_linux/: ast_kind.rs  ast_print_mode.rs  decl_kind.rs  param_kind.rs
z3-sys/src/generated_macos/: error_code.rs  goal_prec.rs  parameter_kind.rs  sort_kind.rs  symbol_kind.rs
z3-sys/src/generated_windows/: ast_kind.rs  ast_print_mode.rs  decl_kind.rs  error_code.rs  goal_prec.rs  param_kind.rs  parameter_kind.rs  sort_kind.rs  symbol_kind.rs
z3-sys/tests/: lib.rs
z3/examples/: api_test.rs
z3/src/: ast.rs  ast_vector.rs  config.rs  context.rs  datatype_builder.rs  fixedpoint.rs  func_decl.rs  func_entry.rs  func_interp.rs  goal.rs  lib.rs  model.rs  ops.rs  optimize.rs  param_descrs.rs  params.rs  pattern.rs  probe.rs  quantifier_elimination.rs  quantifier_elimination_simple.rs  rec_func_decl.rs  solver.rs  sort.rs  statistics.rs  symbol.rs  tactic.rs  user_propagator.rs  version.rs
z3/src/ast/: algebraic.rs  array.rs  bool.rs  bv.rs  char.rs  datatype.rs  dynamic.rs  float.rs  int.rs  mod.rs  numeric.rs  polynomial.rs  real.rs  regexp.rs  rounding_mode.rs  seq.rs  set.rs  string.rs
z3/src/datatype_builder/: constructor.rs  mod.rs
z3/src/translate/: mod.rs  sendable_handle.rs
z3/src/translate/synchronization/: handle.rs  mod.rs
z3/tests/: algebraic_tests.rs  ast_vector_tests.rs  datatype_builder_tests.rs  lib.rs  objectives.rs  ops.rs  optimize_get_assertions.rs  optimize_translate.rs  quantifier_elimination_tests.rs  semver_tests.rs
