[package]
name = "z3"
version = "0.1.0"
authors = ["Graydon Hoare <graydon@pobox.com>"]

description = "High-level rust bindings for the Z3 SMT solver from Microsoft Research"
license = "MIT"
keywords = ["FFI", "SMT", "satisfiability", "solver"]
readme = "README.md"
homepage = "https://github.com/graydon/z3-rs"
repository = "https://github.com/graydon/z3-rs.git"

[dependencies]
libc = "0.2"
log = "0.3"
lazy_static = "0.1"
env_logger = "0.3"
z3-sys = "~0.1.0"
