[package]
name = "z3-sys"
rust-version = "1.85.0"
version = "0.10.7"
authors = ["Graydon Hoare <graydon@pobox.com>", "Bruce Mitchener <bruce.mitchener@gmail.com>", "Nick Fitzgerald <fitzgen@gmail.com>", "Mark DenHoed <mark.denhoed@cs.ox.ac.uk>"]
build = "build.rs"
edition = "2024"

description = "Low-level bindings for the Z3 SMT solver from Microsoft Research"
license = "MIT"
links = "z3"
keywords = ["FFI", "SMT", "satisfiability", "solver"]
categories = ["external-ffi-bindings", "no-std", "no-std::no-alloc"]
readme = "README.md"
documentation = "https://docs.rs/z3-sys/"
homepage = "https://github.com/prove-rs/z3.rs"
repository = "https://github.com/prove-rs/z3.rs.git"

[build-dependencies]
z3-src = { path = "../z3-src", optional = true }
zip = { version = "4.3", optional = true }
pkg-config = "0.3.32"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde_json = { version = "1.0.140", optional = true }
vcpkg = { version = "0.2.15", optional = true }
bindgen = { version = "0.72", optional = true }
proc-macro2 = { version = "1", optional = true }
prettyplease = { version = "0.2", optional = true }
quote = { version = "1", optional = true }
syn = { version = "2", features = ["full"], optional = true }

[lib]
doctest = false

[features]
bundled = ["dep:z3-src"]                                     # Build Z3 from bundled source via z3-src.
vcpkg = ["dep:vcpkg"]                                        # Build Z3 via vcpkg.
gh-release = ["dep:reqwest", "dep:serde_json", "dep:zip"]   # Download pre-compiled Z3 lib from GitHub release for supported platforms.
bindgen = ["dep:bindgen", "dep:proc-macro2", "dep:prettyplease", "dep:quote", "dep:syn"]  # Regenerate functions.rs from local Z3 headers at build time.

# Legacy feature for short term compatibility
static-link-z3 = ["bundled", "deprecated-static-link-z3"]
deprecated-static-link-z3 = []
