[package]
name = "z3"
rust-version = "1.85.0"
version = "0.19.15"
authors = ["Graydon Hoare <graydon@pobox.com>", "Bruce Mitchener <bruce.mitchener@gmail.com>", "Nick Fitzgerald <fitzgen@gmail.com>", "Mark DenHoed <mark.denhoed@cs.ox.ac.uk>"]

description = "High-level rust bindings for the Z3 SMT solver from Microsoft Research"
license = "MIT"
keywords = ["FFI", "SMT", "satisfiability", "solver"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/z3/"
homepage = "https://github.com/prove-rs/z3.rs"
repository = "https://github.com/prove-rs/z3.rs.git"
edition = "2024"


[features]
vendored = ["z3-sys/vendored"]
vcpkg = ["z3-sys/vcpkg"]
gh-release = ["z3-sys/gh-release"]

# Deprecated alias for `vendored`; will be removed in a future release.
bundled = ["z3-sys/bundled"]

num = ["dep:num"]

[dependencies]
log = "0.4"

# optional dependencies
num = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.11"
semver = "1"
rayon = "1.10.0"

[dependencies.z3-sys]
path = "../z3-sys"
version = "0.10.9"
